Finished Reddit navbar

--- a/index.html
+++ b/index.html
@@ -311,26 +311,39 @@
         <form class="menu-filter">
           <input type="search" placeholder="Filter">
         </form>
-        <div class="favorites-header">
+        <div class="reddit-favorites-header submenu-header">
           <h2>Favorites</h2>
-          <i class="fa fa-caret-up"></i>
-          <i class="fa fa-caret-down"></i>
+          <i class="fa fa-caret-up reddit-favorites-header-up"></i>
+          <i class="fa fa-caret-down reddit-favorites-header-down"></i>
         </div>
-        <!-- <ul class="favorites">
-          <li><img src="img/subreddit.jpg" alt="subreddit"><a href=""><span>Home</span><i class="fa fa-star"></i></a></li>
+        <ul class="reddit-favorites submenu">
+          <li class="fav"><a href=""><i class="fa fa-circle"></i><span>r/running</span><i class="fa fa-star"></i></a></li>
+          <li class="fav"><a href=""><i class="fa fa-circle"></i><span>r/webdev</span><i class="fa fa-star"></i></a></li>
         </ul>
-        <div class="subscriptions-header">
+        <div class="reddit-subscriptions-header submenu-header">
           <h2>Subscriptions</h2>
-          <i class="fa fa-caret-up"></i>
-          <i class="fa fa-caret-down"></i>
+          <i class="fa fa-caret-up reddit-subscriptions-header-up"></i>
+          <i class="fa fa-caret-down reddit-subscriptions-header-down"></i>
         </div>
-        <ul class="subscriptions">
-          <li><img src="img/subreddit.jpg" alt="subreddit"><a href=""><span>Home</span><i class="fa fa-star"></i></a></li>
+        <ul class="reddit-subscriptions submenu">
+          <li><a href=""><i class="fa fa-circle"></i><span>r/architecture</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/battlestations</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/CrappyDesign</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/Fitness</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/Frontend</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/IAmaA</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/Kayaking</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/MechanicalKeyboards</span><i class="fa fa-star"></i></a></li>
+          <li class="fav"><a href=""><i class="fa fa-circle"></i><span>r/running</span><i class="fa fa-star"></i></a></li>
+          <li><a href=""><i class="fa fa-circle"></i><span>r/SubredditSimulator</span><i class="fa fa-star"></i></a></li>
+          <li class="fav"><a href=""><i class="fa fa-circle"></i><span>r/webdev</span><i class="fa fa-star"></i></a></li>
         </ul>
-        <a class="create-a-new-community" href="#">
-          <i class="fa fa-star"></i>
-          <span>Create a new community</span>
-        </a> -->
+        <div class="create-a-new-community">
+          <a href="#">
+            <i class="fa fa-star"></i>
+            <span>Create a new community</span>
+          </a>
+        </div>
       </div>
       <div class="spacer"></div>
     </div>
@@ -339,13 +352,12 @@
     <main>
       <h1>Responsive Navbars (wip)</h1>
       <p>Select one of the choices below to view its navigation bar.</p>
-      <p>Note: These were made with the intention of practicing HTML and CSS and so may lack some functionality due to the minimal amount of javascript used.</p>
       <ul>
-        <li class='navbar-item'>Uber</li>
-        <li class='navbar-item'>Strava</li>
-        <li class='navbar-item'>Stack Overflow</li>
-        <li class='navbar-item'>Meetup</li>
         <li class='navbar-item'>Reddit</li>
+        <li class='navbar-item'>Stack Overflow</li>
+        <li class='navbar-item'>Strava</li>
+        <li class='navbar-item'>Uber</li>
+        <li class='navbar-item'>Meetup</li>
       </ul>
     </main>
 
