--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
 
     <!-- main content -->
     <main>
-      <h1>Responsive Navbars (wip)</h1>
-      <p>Select one of the choices below to view its navigation bar.</p>
+      <h1>Responsive Navbars</h1>
+      <p>Select one of the websites below to view its navigation bar.</p>
       <ul>
         <li class='navbar-item'>Reddit</li>
         <li class='navbar-item'>Stack Overflow</li>
@@ -359,6 +359,8 @@
         <li class='navbar-item'>Uber</li>
         <li class='navbar-item'>Meetup</li>
       </ul>
+      <p>Made with HTML, CSS, and JS.</p>
+      <p><a href="https://github.com/austinerb/ResponsiveNavbars" target="_blank">GitHub repo</a></p>
     </main>
 
     <script type="text/javascript" src="js/script.js"></script>
